resources/public/style.css
/* ... */
.modal .modal-header, .modal .modal-footer {
    margin: 0;
    min-height: 2em;
}

.modal .modal-body {
    padding: 15px 10px;
    max-width: 98vw;
    max-height: 88vh;
    overflow: auto;
}

/*//////////////////////////*\
| Mobile Styles
\*\\\\\\\\\\\\\\\\\\\\\\\\\\*/

.mobile-only {
    display: none;
}

@media (max-width: 1500px) {
    #donate, #donate > * {
        max-width: 300px;
    }
}

@media (max-width: 768px) {
    aside.panel {
        max-width: 100% !important;
        width: 100% !important;
    }

    aside.panel.left {
        left: -105%;
    }

    aside.panel.right {
        right: -105%;
    }

    body.panel-open #ui {
        right: initial;
        width: initial;
        transition: none;
    }

    .mobile-only {
        display: initial;
    }

    .modal {
        min-width: 1vw;
        max-width: 95vw;
    }

    .palette {
        width: 100%;
    }

    body .message {
        max-width: 100%;
        max-height: 100%;
        overflow: auto;
    }

    #chat-hint {
        font-size: .7rem;
    }

    #chat-ratelimit {
        font-size: 1rem;
    }

    #jump-to-bottom {
        line-height: 2rem;
        font-size: 1.25rem;
        top: -2rem;
    }

    .halves .side {
        flex: 1 0 100%;
    }

    .chat-lookup-side {
        max-height: initial;
    }
}

